{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 84,
  "lineage": "980446f5-a2f3-c945-023b-0a0dd8bfa3e4",
  "resources": [
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:loadbalancer/app/sanjeeb-aws-alb/2a876d68a19e8b02",
            "arn_suffix": "app/sanjeeb-aws-alb/2a876d68a19e8b02",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sanjeeb-aws-alb-213250707.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:loadbalancer/app/sanjeeb-aws-alb/2a876d68a19e8b02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sanjeeb-aws-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fe65cc854c6b11a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04676c22b10a3dfdb"
              },
              {
                "subnet_id": "subnet-0525edbadfb0fa735"
              },
              {
                "subnet_id": "subnet-0fb5e2ba3eb0f5b96"
              }
            ],
            "subnets": [
              "subnet-04676c22b10a3dfdb",
              "subnet-0525edbadfb0fa735",
              "subnet-0fb5e2ba3eb0f5b96"
            ],
            "tags": {
              "Name": "sanjeeb-aws-alb"
            },
            "tags_all": {
              "Name": "sanjeeb-aws-alb"
            },
            "vpc_id": "vpc-0cbe35c5065ae7491",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg-load-balancer",
            "module.vpc.aws_default_subnet.default_az1",
            "module.vpc.aws_default_subnet.default_az2",
            "module.vpc.aws_default_subnet.default_az3",
            "module.vpc.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:listener/app/sanjeeb-aws-alb/2a876d68a19e8b02/2717e4976d7460cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:targetgroup/sanjeeb-aws-tg/4a58545cd9c9a301",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:listener/app/sanjeeb-aws-alb/2a876d68a19e8b02/2717e4976d7460cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:loadbalancer/app/sanjeeb-aws-alb/2a876d68a19e8b02",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.application_load_balancer.aws_lb.aws-application_load_balancer",
            "module.application_load_balancer.aws_lb_target_group.alb_target_group",
            "module.security_group.aws_security_group.aws-sg-load-balancer",
            "module.vpc.aws_default_subnet.default_az1",
            "module.vpc.aws_default_subnet.default_az2",
            "module.vpc.aws_default_subnet.default_az3",
            "module.vpc.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:targetgroup/sanjeeb-aws-tg/4a58545cd9c9a301",
            "arn_suffix": "targetgroup/sanjeeb-aws-tg/4a58545cd9c9a301",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:525427866192:targetgroup/sanjeeb-aws-tg/4a58545cd9c9a301",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sanjeeb-aws-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cbe35c5065ae7491"
          },
          "dependencies": [
            "module.vpc.aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-sg-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:security-group/sg-0fe65cc854c6b11a3",
            "description": "Allow incoming connections for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe65cc854c6b11a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections (Linux)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-sg-load-balancer",
            "name_prefix": "",
            "owner_id": "525427866192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-sg"
            },
            "tags_all": {
              "Name": "load-balancer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe35c5065ae7491"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-sg-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:security-group/sg-0007e4150d55a0c73",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0007e4150d55a0c73",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe65cc854c6b11a3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH connections (Linux)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe65cc854c6b11a3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-sg-webserver",
            "name_prefix": "",
            "owner_id": "525427866192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-sg"
            },
            "tags_all": {
              "Name": "Webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbe35c5065ae7491"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg-load-balancer",
            "module.vpc.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:subnet/subnet-04676c22b10a3dfdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04676c22b10a3dfdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525427866192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet for eu-west-2a"
            },
            "tags_all": {
              "Name": "Default subnet for eu-west-2a"
            },
            "vpc_id": "vpc-0cbe35c5065ae7491"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:subnet/subnet-0525edbadfb0fa735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0525edbadfb0fa735",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525427866192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet for eu-west-2b"
            },
            "tags_all": {
              "Name": "Default subnet for eu-west-2b"
            },
            "vpc_id": "vpc-0cbe35c5065ae7491"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:subnet/subnet-0fb5e2ba3eb0f5b96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0fb5e2ba3eb0f5b96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525427866192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Default subnet for eu-west-2c"
            },
            "tags_all": {
              "Name": "Default subnet for eu-west-2c"
            },
            "vpc_id": "vpc-0cbe35c5065ae7491"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:525427866192:vpc/vpc-0cbe35c5065ae7491",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00169840022dd78b0",
            "default_route_table_id": "rtb-0e5c96c5cda003ed3",
            "default_security_group_id": "sg-0dab409f107be1d18",
            "dhcp_options_id": "dopt-0044da238e085dfb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0cbe35c5065ae7491",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5c96c5cda003ed3",
            "owner_id": "525427866192"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}